# lunar-browser

./: BUILD.md  INSTALL.md  README.md  build.bat  package.json  push-to-github.ps1
.github/workflows/: build-windows.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: adblock.rs  bookmarks.rs  commands.rs  downloads.rs  extensions.rs  history.rs  incognito.rs  lib.rs  main.rs  memory.rs  privacy.rs  settings.rs  state.rs  storage.rs  tab.rs  workspace.rs
src/components/: downloads.js  menu.js  newtab.js  omnibox.js  palette.js  settings.js  tabstrip.js  webview-host.js  workspaces.js
src/lib/: tauri-bridge.js
src/styles/: main.css  moonlit-dark.css
