[package]
name = "lunar-browser"
version = "1.0.0"
description = "Lunar Browser — a memory-efficient, privacy-first web browser built on Tauri + Rust."
authors = ["Lunar Browser Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lunar_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools", "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-notification = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
sled = "0.34"

# HTTP / networking
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Memory management
sysinfo = "0.32"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
dashmap = "6.1"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
regex = "1.10"
glob = "0.3"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"

# Ad-block / filter parsing

# Compression (for filter list downloads)
flate2 = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Memory", "Win32_System_ProcessStatus"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-web-kit = "0.2"

[features]
# This feature is used for production builds where `devPath` points to the bundled app
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
